# minimal-lightning-hydra-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DONE.md  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
.serena/: project.yml
.serena/memories/: config.md  conventions.md  core.md  modernization_log.md  optimizers.md  schedulers.md  suggested_commands.md  task_completion.md  tech_stack.md  testing.md  utils.md
.serena/memories/models/: core.md
configs/datamodule/: default.yaml  mnist.yaml
configs/model/: template.yaml
configs/paths/: default.yaml
src/: eval.py  train.py
src/datamodules/: mnist_datamodule.py  template_datamodule.py
src/datamodules/components/: rotation_dataloader.py
src/models/: template_module.py
src/optimizers/: dadapt_adam.py  lion.py
src/schedulers/: warmup.py
src/utils/: torch_utils.py  utils.py
tests/: conftest.py
tests/helpers/: package_available.py
