[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-learning-template"
version = "0.1.0"
description = "Deep learning project template with PyTorch Lightning and Hydra"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Project Author", email = "author@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0,<3.0.0",
    "torchmetrics>=1.0.0",
    "hydra-core>=1.3.0",
    "hydra-colorlog>=1.3.0",
    "hydra-optuna-sweeper>=1.3.0",
    "pyrootutils>=1.0.0",
    "rich>=13.0.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]
loggers = [
    "wandb",
    "mlflow",
    "neptune-client",
    "comet-ml",
    "tensorboard",
]
all = [
    "deep-learning-template[dev,loggers]",
]

[project.urls]
Homepage = "https://github.com/user/project"
Repository = "https://github.com/user/project.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

# ============ Tool Configurations ============

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 99
target-version = "py39"
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E203", "E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true